[tool.poetry]
name = "brag-documents"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.27"
mkdocs-git-authors-plugin = "^0.9.2"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
