[project]
name = "brag-documents"
version = "0.1.0"
description = ""
authors = [{ name = "zkan", email = "zkan.cs@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "mkdocs-material>=9.5.27,<10",
    "mkdocs-git-authors-plugin>=0.9.2,<0.10",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
